# cornflakes

./: .gitignore  Cargo.toml
datasize_macro/: Cargo.toml
datasize_macro/src/: impl_data_sizes.rs  lib.rs
src/: builder.rs  datasize.rs  lib.rs  readable.rs  writable.rs
tests/: datasize_derive_test.rs  datasize_test.rs  readable_derive_test.rs
