# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "cornflakes"
version = "0.0.0-dev"
readme = false
repository = "https://github.com/XdotRS/xrb/tree/main/cornflakes"
documentation = "https://docs.aquariwm.org/doc/cornflakes"
authors = [ "X.RS", "Antikyth <antikyth at gmail dot com>" ]
edition = "2021"
description = "Utilities for (de)serialization."
license = "MPL-2.0"
keywords = [ "serialization", "encoding", "bytes" ]
categories = [ "encoding" ]

[dependencies]
#thiserror = "1.0"
bytes = "1.2"
datasize_macro = { path = "./datasize_macro" }
