# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "cornflakes"
version = "0.0.7"
readme = false
repository = "https://github.com/XdotRS/cornflakes"
documentation = "https://docs.aquariwm.org/doc/cornflakes"
authors = ["X.RS", "Antikyth <antikyth at gmail dot com>", "Syudagye"]
edition = "2021"
description = "Utilities for (de)serialization in XRB."
license = "MPL-2.0"
keywords = ["serialization", "encoding", "bytes"]
categories = ["encoding"]

[dependencies]
thiserror = "1.0"
bytes = "1.2"
cornflakes_datasize_macro = { path = "./datasize_macro", version = "0.0.1" }
num = "0.4"
