# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "datasize_macro"
description = "Derive macro for implementing DataSize and StaticDataSize traits"
version = "0.1.0"
edition = "2021"
readme = false
authors = [ "X.RS", "Syudagye <syudagye@gmail.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.103", features = ["full"] }
quote = "1.0.21"
proc-macro2 = "1.0.47"
